--- a/A3WebApplication/A3WebApplication/Web.config
+++ b/A3WebApplication/A3WebApplication/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="dbA3ConnStr" connectionString="Data Source=localhost;Initial Catalog=dbA3;Integrated Security=True"
+    <add name="dbA3ConnStr" connectionString="Data Source=localhost;Initial Catalog=dbAssignment3;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
